
This new command allows to open a file from the filesystem.

The user is prompted with the minibuffer, files are browsable with the fuzzy completion.

The default directory is the one from the download manager.

Press =Enter= to visit a file, =C-l=  to go one directory up, =C-j= to
browse the directory at point.

By default, it uses the =xdg-open=  command. The user can override the
=next:open-file-fn= function,  which takes the filename  (or directory
name) as parameter. See the manual for an example.

The default keybinding is =C-x C-f=.

__Note__: this feature is alpha and is meant to grow in Next 1.4 and beyond!

*** New command: download-open-file

Open a recently downloaded file.

*** Buffer management improvements
When killing  the last  created buffer,  we were  brought back  to the
first one, so usually  the help buffer. This is now  fixed, we stay at
the previous last created buffer, as expected.

*** Minibuffer improvements
- in  the minibuffer,  using  =M-backspace= to  delete  a word  didn't
  respect whitespaces. It is fixed.
- its behaviour was  also too different than other  common tools, like
  Firefox.  Now:
  - it deletes the trailing word delimiter
  - it removes all trailing delimiters PLUS one word.
*** Add more keys
- Key pad keys were added.
  The PyQt port requires an update.
** DONE 1.3.0
*** DONE PyQt/Webengine platform port
QtWebengine is based off Blink (the renderer of Chrome).
A PyQt platform port would have the benefits of being cross-platform while
offering an alternative web renderer.

Because of WKWebKit library limitations, the cocoa-webkit platform port misses
some features such as proxy support, per-buffer cookie file, network resource
interception.  To address these limitations, the PyQt platform port could become
the default for macOS.
*** DONE VI bindings
*** DONE Ad-blocking support
Only host-based for now and uses Easylist by default.
*** DONE Fix search implementation